[BUGFIX] directory-tree expand/collapse icon switching
Resolves https://github.com/TYPO3-Documentation/render-guides/issues/842

--- a/packages/typo3-docs-theme/assets/sass/components/_directoryTree.scss
+++ b/packages/typo3-docs-theme/assets/sass/components/_directoryTree.scss
@@ -1,6 +1,10 @@
 .directory-tree {
     ul {
         margin-bottom: 0;
+        padding-left: 0;
+        ul {
+            padding-left: 1.5em;
+        }
         list-style: none;
         li {
             margin-bottom: 0;
@@ -12,12 +16,12 @@
                         text-decoration: none;
                         .icon::before {
                             font-family: 'Font Awesome 6 Free';
-                            content: "\f0fe";
+                            content: "\f146";
                         }
 
                         &.collapsed {
                             .icon::before {
-                                content: "\f146";
+                                content: "\f0fe";
                             }
                         }
                     }
@@ -34,6 +38,7 @@
                         font-family: var(--bs-body-font-family);
                         line-height: var(--bs-body-line-height);
                         font-size: 1.1rem;
+                        padding: 0;
                         &::before {
                             width: 1.5em;
                             font-family: 'Font Awesome 6 Free';
